<resources>
    <string name="app_name">Todo</string>

    <string name="authority_todo">mbanje.kurt.todo_provider.authority</string>
    <string name="authority_test">just.some.test_provider.authority</string>

    <!-- TODO LIST SCREEN -->
    <string name="todo_db_file">database file: &lt;b&gt; &lt;font color="red"&gt; %s &lt;/font&gt;&lt;/b&gt;</string>
    <string name="todo_list_action_title">To Do List</string>
    <string name="todo_list_action_settings">Settings</string>
    <string name="todo_list_header">Work Things to Complete</string>
    <string name="todo_list_sub_header">TO DO</string>
    <string name="todo_list_progress">Progress</string>
    <string name="todo_list_progress_percent">&#37;&lt;br/&gt;Done</string>
    <string name="todo_list_add_hint">Add new item</string>
    <string name="todo_list_add">Add</string>
    <string name="todo_one_selection">One item selected</string>
    <string name="todo_multi_selection">%d items selected</string>
    <string name="todo_list_empty">You don\'t have any tasks yet. Use the add button below to add new tasks. Long press a task to delete.</string>

    <!-- TODO ADD ITEM DIALOG -->
    <string name="todo_dialog_save">Save</string>
    <string name="todo_dialog_cancel">Cancel</string>
    <string name="todo_dialog_label_hint">Enter title</string>
    <string name="todo_dialog_description_hint">Enter description</string>
    <string name="todo_title_required">Please enter title</string>
    <string name="todo_desc_required">Please enter description</string>
    <string name="todo_item_added">Task Saved</string>
    <string name="todo_item_deleted">Tasks deleted</string>

    <!-- TODO ADD DELETE ITEM -->
    <string name="todo_action_delete">Delete</string>
</resources>
