<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/home_logout_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/list_dialog_divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/todo_dialog_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/todo_dialog_label_hint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/todo_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_dialog_description_hint"
            android:minLines="4"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_dialog_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:listChoiceBackgroundIndicator"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/todo_dialog_cancel" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/list_dialog_divider" />

            <Button
                android:id="@+id/dialog_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:listChoiceBackgroundIndicator"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/todo_dialog_save" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>